--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IndustryActivity">
+    tools:context=".view.IndustryActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
