--- a/android/app/src/main/res/layout/activity_academician_login.xml
+++ b/android/app/src/main/res/layout/activity_academician_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.AcademicianActivity">
@@ -41,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:text="USİ"
                 android:textColor="#FFFFFF"
-                android:textSize="30sp"
+                android:textSize="27sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -79,7 +80,7 @@
             android:layout_marginBottom="15dp"
             android:text="Sicil Numaranızı Girin"
             android:textColor="#000000"
-            android:textSize="28sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextText"
             app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +96,9 @@
             android:layout_marginVertical="20dp"
             android:ems="14"
             android:hint="Sicil Numaranızı Girin"
+            android:textColorHint="#A9A5A5"
             android:inputType="number"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +107,7 @@
         <Button
             android:id="@+id/btnSignIn"
             android:layout_width="300dp"
-            android:layout_height="60dp"
+            android:layout_height="57dp"
             android:layout_gravity="center"
             android:layout_marginVertical="12dp"
             android:backgroundTint="#F06E1B"
@@ -125,7 +128,7 @@
         <Button
             android:id="@+id/btnBack"
             android:layout_width="300dp"
-            android:layout_height="60dp"
+            android:layout_height="57dp"
             android:layout_gravity="center"
             android:layout_marginVertical="12dp"
             android:backgroundTint="#FFFFFF"
