--- a/android/app/src/main/res/layout/activity_academician_login.xml
+++ b/android/app/src/main/res/layout/activity_academician_login.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.AcademicianActivity">
 
     <!-- TOP BANNER -->
@@ -61,8 +61,8 @@
         android:layout_width="308dp"
         android:layout_height="332dp"
         android:layout_gravity="center"
-        android:layout_marginTop="77dp"
-        android:layout_marginBottom="142dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="30dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottomLogos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,11 +76,12 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
-            android:layout_marginBottom="15dp"
             android:text="Sicil Numaranızı Girin"
             android:textColor="#000000"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextText"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,15 +91,15 @@
 
         <EditText
             android:id="@+id/sicilNo"
-            android:layout_width="300dp"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginVertical="20dp"
             android:ems="14"
             android:hint="Sicil Numaranızı Girin"
-            android:textColorHint="#A9A5A5"
             android:inputType="number"
             android:textColor="#000000"
+            android:textColorHint="#A9A5A5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,18 +107,19 @@
 
         <Button
             android:id="@+id/btnSignIn"
-            android:layout_width="300dp"
-            android:layout_height="57dp"
+            android:layout_width="270dp"
+            android:layout_height="55dp"
             android:layout_gravity="center"
-            android:layout_marginVertical="12dp"
+            android:layout_marginTop="15dp"
             android:backgroundTint="#F06E1B"
-            android:elevation="30dp"
+            android:elevation="8dp"
             android:fontFamily="monospace"
             android:onClick="signIn"
             android:text="Giriş Yap"
             android:textColor="#FFFFFF"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:textStyle="bold"
+            android:translationZ="4dp"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -125,21 +127,23 @@
             tools:ignore="OnClick"
             tools:layout_editor_absoluteY="368dp" />
 
+
         <Button
             android:id="@+id/btnBack"
-            android:layout_width="300dp"
-            android:layout_height="57dp"
+            android:layout_width="270dp"
+            android:layout_height="55dp"
             android:layout_gravity="center"
             android:layout_marginVertical="12dp"
             android:backgroundTint="#FFFFFF"
-            android:elevation="30dp"
+            android:elevation="8dp"
             android:fontFamily="monospace"
             android:onClick="gotoBack"
             android:text="Geri Dön"
             android:textColor="#F06E1B"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:cornerRadius="10dp"
+            android:translationZ="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
